refactor IndexedPositions removing the index